falta cambiar el swich para desplazar triangulo(337)

--- a/css/niveles/prueba.css
+++ b/css/niveles/prueba.css
@@ -1,7 +1,6 @@
 .bodyNiveles {
   background-color: #02111b;
   margin: 0px auto;
-  height: 250px;
 }
 
 .logo {
@@ -50,7 +49,4 @@
 
 
 
-.id1nvl1{}
-.id2nvl1{}
-.id3nvl1{}
-.id4nvl1{}
+.texto1Ejercicio{}
