--- a/css/propioCss.css
+++ b/css/propioCss.css
@@ -210,7 +210,7 @@ and open the template in the editor.
                                                     
     .bodyEjercicios{
        padding-top: 20px;
-       padding-bottom: 40px;
+       padding-bottom: 37px;
     }
                                                     
                                                     
@@ -516,7 +516,14 @@ and open the template in the editor.
         .Pierna {margin-left: 225px !important;}  
         
         
-       
+        .logo{clear: both}
+        #texto1{width: auto !important}
+        #titulo2{margin-top: 20px !important}
+        .text-center{clear: both}
+        
+        .texto1-1,.texto1-3,.texto1-5,.texto1-7{float: left;clear: both;margin-left: 60px}
+        .texto1-2,.texto1-4,.texto1-6,.texto1-8{float: right;margin-right: 60px}
+        
     }
     
     
