--- a/css/propioCss.css
+++ b/css/propioCss.css
@@ -296,15 +296,15 @@ and open the template in the editor.
 
     
     
-    .Pecho-Triceps{margin-right: 0px; }
-    .Pecho-Triceps div p{margin: -4px 32px 10px;}
-    .Pecho-Triceps div .series{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;margin-left: 34px;font-size: 40px}
-    .Pecho-Triceps div .tiempo{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;font-size: 40px}
+    .Pecho{margin-right: 0px; }
+    .Pecho div p{margin: -4px 32px 10px;}
+    .Pecho div .series{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;margin-left: 34px;font-size: 40px}
+    .Pecho div .tiempo{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;font-size: 40px}
     
-    .Hombro-Espalda{margin-right: 0px;}
-    .Hombro-Espalda div p{margin: -7px 32px 9px;}
-    .Hombro-Espalda div .series{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;margin-left: 34px;font-size: 40px}
-    .Hombro-Espalda div .tiempo{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;font-size: 40px}
+    .Hombro{margin-right: 0px;}
+    .Hombro div p{margin: -7px 32px 9px;}
+    .Hombro div .series{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;margin-left: 34px;font-size: 40px}
+    .Hombro div .tiempo{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;font-size: 40px}
 
     
     
@@ -508,14 +508,45 @@ and open the template in the editor.
         .bordeChulo {
             width: 269px;
             height: 212px;
+            font-size: 39px;
+        }
+        
+        .bordeChulo1 {
+            font-size: 28px !important;
         }
    
         
+        
+    
+        
+        
         .Pecho {margin-left: 80px !important;}
         
+        .Pecho div p{margin: -4px 31px 15px;}
+        .Pecho div .series{}
+        .Pecho div .tiempo{}
+
+        .Hombro div p{margin: -7px 32px 15px;}
+        .Hombro div .series{}
+        .Hombro div .tiempo{}
+
+
         .Brazo {margin-left: 80px !important;}    
-    
+        .Brazo div p{margin: 13px 32px 35px;font-size: 46px;}
+        .Brazo div .series{}
+        .Brazo div .tiempo{}
+
+        .Abs div p{margin: 13px 32px 32px;font-size: 46px;}    
+        .Abs div .series{}
+        .Abs div .tiempo{}
+
         .Pierna {margin-left: 225px !important;}  
+        .Pierna div p{margin: 13px 32px 32px;font-size: 46px;}
+        .Pierna div .series{}
+        .Pierna div .tiempo{}
+
+        
+        
         
         
         .logo{clear: both}
@@ -523,8 +554,13 @@ and open the template in the editor.
         #titulo2{margin-top: 20px !important}
         .text-center{clear: both}
         
-        .texto1-1,.texto1-3,.texto1-5,.texto1-7{float: left;clear: both;margin-left: 60px}
-        .texto1-2,.texto1-4,.texto1-6,.texto1-8{float: right;margin-right: 60px}
+        .texto1-1,.texto1-3,.texto1-5,.texto1-7,.texto1-9,.texto1-11,.texto1-13,.texto1-15,.texto1-17,.texto1-19,.texto1-21,.texto1-23,.texto1-25,.texto1-27,.texto1-29,.texto1-31{float: left;clear: both;margin-left: 60px}
+        .texto1-2,.texto1-4,.texto1-6,.texto1-8,.texto1-10,.texto1-12,.texto1-14,.texto1-16,.texto1-18,.texto1-20,.texto1-22,.texto1-24,.texto1-26,.texto1-28,.texto1-30,.texto1-32{float: right;margin-right: 60px}
+        
+        
+        
+        
+        
         
         .divNivelBocata2{margin-top: 200px}
         .divNivelBocata3{margin-top: 200px}
@@ -539,7 +575,7 @@ and open the template in the editor.
         font-size: 50px;
     }
         
-    .Pecho {margin-left: 0px !important;;}
+    .Pecho{margin-left: 0px !important;;}
         
     .Brazo {margin-left: 0px !important;;}    
     
@@ -551,8 +587,8 @@ and open the template in the editor.
     }
     
     
-        .texto1-1,.texto1-3,.texto1-5,.texto1-7{float: left;clear: both;margin-left: 20px;font-size: 15px}
-        .texto1-2,.texto1-4,.texto1-6,.texto1-8{float: right;margin-right: 20px;font-size: 15px}     
+        .texto1-1,.texto1-3,.texto1-5,.texto1-7,.texto1-9,.texto1-11,.texto1-13,.texto1-15,.texto1-17,.texto1-19,.texto1-21,.texto1-23,.texto1-25,.texto1-27,.texto1-29,.texto1-31{float: left;clear: both;margin-left: 20px;font-size: 15px}
+        .texto1-2,.texto1-4,.texto1-6,.texto1-8,.texto1-10,.texto1-12,.texto1-14,.texto1-16,.texto1-18,.texto1-20,.texto1-22,.texto1-24,.texto1-26,.texto1-28,.texto1-30,.texto1-32{float: right;margin-right: 20px;font-size: 15px}     
    
     
     }
@@ -579,7 +615,7 @@ and open the template in the editor.
     }
         
     .Pecho {margin-left: 0px !important;;}
-    .Hombro-Espalda{margin-left: 0px !important;;}
+    .Hombro {margin-left: 0px !important;;}
     .Brazo {margin-left: 0px !important;;}    
     .Abs {margin-left: 0px !important;;}    
     .Pierna {margin-left: 0px !important;}
