--- a/css/propioCss.css
+++ b/css/propioCss.css
@@ -238,7 +238,7 @@ and open the template in the editor.
         background-repeat: no-repeat;
         background-size: cover;
         float: left;
-        font-size: 54px;
+        font-size: 50px;
         border-radius: 15px;
     }
     .bordeChulo:hover{
@@ -297,31 +297,31 @@ and open the template in the editor.
     
     
     .Pecho{margin-right: 0px; }
-    .Pecho div p{margin: -4px 32px 10px;}
-    .Pecho div .series{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;margin-left: 34px;font-size: 40px}
-    .Pecho div .tiempo{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;font-size: 40px}
+    .Pecho div p{margin: -4px 32px 18px;}
+    .Pecho div .series{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;margin-left: 34px;font-size: 36px}
+    .Pecho div .tiempo{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;font-size: 36px}
     
     .Hombro{margin-right: 0px;}
-    .Hombro div p{margin: -7px 32px 9px;}
-    .Hombro div .series{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;margin-left: 34px;font-size: 40px}
-    .Hombro div .tiempo{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;font-size: 40px}
+    .Hombro div p{margin: -7px 32px 18px;}
+    .Hombro div .series{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;margin-left: 34px;font-size: 36px}
+    .Hombro div .tiempo{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;font-size: 36px}
 
     
     
     .Brazo{margin-right: 0px;}
-    .Brazo div p{margin: -4px 32px 45px; font-size: 46px}
-    .Brazo div .series{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;margin-left: 34px;font-size: 40px}
-    .Brazo div .tiempo{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;font-size: 40px}
+    .Brazo div p{margin: 17px 32px 45px; font-size: 55px}
+    .Brazo div .series{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;margin-left: 34px;font-size: 36px}
+    .Brazo div .tiempo{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;font-size: 36px}
 
     .Abs{margin-left: 211px !important;clear: both}
-    .Abs div p{margin: -4px 32px 45px;}    
-    .Abs div .series{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;margin-left: 34px;font-size: 40px}
-    .Abs div .tiempo{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;font-size: 40px}
+    .Abs div p{margin: 17px 32px 45px;font-size: 55px}    
+    .Abs div .series{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;margin-left: 34px;font-size: 36px}
+    .Abs div .tiempo{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;font-size: 36px}
 
     .Pierna{}
-    .Pierna div p{margin: -4px 32px 45px;}
-    .Pierna div .series{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;margin-left: 34px;font-size: 40px}
-    .Pierna div .tiempo{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;font-size: 40px}
+    .Pierna div p{margin: 17px 32px 45px;font-size: 55px}
+    .Pierna div .series{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;margin-left: 34px;font-size: 36px}
+    .Pierna div .tiempo{color: white;text-align: left;text-align: -webkit-center;width: 40%;float: left;margin: auto;font-size: 36px}
 
 
     
@@ -614,10 +614,10 @@ and open the template in the editor.
     font-size: 50px;
     }
         
-    .Pecho {margin-left: 0px !important;;}
-    .Hombro {margin-left: 0px !important;;}
-    .Brazo {margin-left: 0px !important;;}    
-    .Abs {margin-left: 0px !important;;}    
+    .Pecho {margin-left: 0px !important;}
+    .Hombro {margin-left: 0px !important;}
+    .Brazo {margin-left: 0px !important;}    
+    .Abs {margin-left: 0px !important;}    
     .Pierna {margin-left: 0px !important;}
 
      
