--- a/css/propioCss.css
+++ b/css/propioCss.css
@@ -614,8 +614,8 @@ padding-top: 12px    }
         #titulo2{margin-top: 20px !important}
         .text-center{clear: both}
         
-        .texto1-1,.texto1-3,.texto1-5,.texto1-7,.texto1-9,.texto1-11,.texto1-13,.texto1-15,.texto1-17,.texto1-19,.texto1-21,.texto1-23,.texto1-25,.texto1-27,.texto1-29,.texto1-31{float: left;clear: both;margin-left: 60px}
-        .texto1-2,.texto1-4,.texto1-6,.texto1-8,.texto1-10,.texto1-12,.texto1-14,.texto1-16,.texto1-18,.texto1-20,.texto1-22,.texto1-24,.texto1-26,.texto1-28,.texto1-30,.texto1-32{float: right;margin-right: 60px}
+        .texto1-1,.texto1-3,.texto1-5,.texto1-7,.texto1-9,.texto1-11,.texto1-13,.texto1-15,.texto1-17,.texto1-19,.texto1-21,.texto1-23,.texto1-25,.texto1-27,.texto1-29,.texto1-31,.texto1-33,.texto1-35,.texto1-37,.texto1-39,.texto1-41,.texto1-43,.texto1-45,.texto1-47{float: left;clear: both;margin-left: 60px}
+        .texto1-2,.texto1-4,.texto1-6,.texto1-8,.texto1-10,.texto1-12,.texto1-14,.texto1-16,.texto1-18,.texto1-20,.texto1-22,.texto1-24,.texto1-26,.texto1-28,.texto1-30,.texto1-32,.texto1-34,.texto1-36,.texto1-38,.texto1-40,.texto1-42,.texto1-44,.texto1-46,.texto1-48{float: right;margin-right: 60px}
         
         
         
@@ -652,8 +652,8 @@ padding-top: 12px    }
     }
     
     
-        .texto1-1,.texto1-3,.texto1-5,.texto1-7,.texto1-9,.texto1-11,.texto1-13,.texto1-15,.texto1-17,.texto1-19,.texto1-21,.texto1-23,.texto1-25,.texto1-27,.texto1-29,.texto1-31{float: left;clear: both;margin-left: 20px;font-size: 15px}
-        .texto1-2,.texto1-4,.texto1-6,.texto1-8,.texto1-10,.texto1-12,.texto1-14,.texto1-16,.texto1-18,.texto1-20,.texto1-22,.texto1-24,.texto1-26,.texto1-28,.texto1-30,.texto1-32{float: right;margin-right: 20px;font-size: 15px}     
+        .texto1-1,.texto1-3,.texto1-5,.texto1-7,.texto1-9,.texto1-11,.texto1-13,.texto1-15,.texto1-17,.texto1-19,.texto1-21,.texto1-23,.texto1-25,.texto1-27,.texto1-29,.texto1-31,.texto1-33,.texto1-35,.texto1-37,.texto1-39,.texto1-41,.texto1-43,.texto1-45,.texto1-47{float: left;clear: both;margin-left: 20px;font-size: 15px}
+        .texto1-2,.texto1-4,.texto1-6,.texto1-8,.texto1-10,.texto1-12,.texto1-14,.texto1-16,.texto1-18,.texto1-20,.texto1-22,.texto1-24,.texto1-26,.texto1-28,.texto1-30,.texto1-32,.texto1-34,.texto1-36,.texto1-38,.texto1-40,.texto1-42,.texto1-44,.texto1-46,.texto1-48{float: right;margin-right: 20px;font-size: 15px}     
    
     
     }
@@ -713,8 +713,8 @@ padding-top: 12px    }
     
     
     
-      .texto1-1,.texto1-3,.texto1-5,.texto1-7,.texto1-9,.texto1-11,.texto1-13,.texto1-15,.texto1-17,.texto1-19,.texto1-21,.texto1-23,.texto1-25,.texto1-27,.texto1-29,.texto1-31{float: none;clear: both;margin-left: 0px;font-size: 15px}
-        .texto1-2,.texto1-4,.texto1-6,.texto1-8,.texto1-10,.texto1-12,.texto1-14,.texto1-16,.texto1-18,.texto1-20,.texto1-22,.texto1-24,.texto1-26,.texto1-28,.texto1-30,.texto1-32{float: none;clear: both;margin-right: 0px;font-size: 15px}     
+      .texto1-1,.texto1-3,.texto1-5,.texto1-7,.texto1-9,.texto1-11,.texto1-13,.texto1-15,.texto1-17,.texto1-19,.texto1-21,.texto1-23,.texto1-25,.texto1-27,.texto1-29,.texto1-31,.texto1-33,.texto1-35,.texto1-37,.texto1-39,.texto1-41,.texto1-43,.texto1-45,.texto1-47{float: none;clear: both;margin-left: 0px;font-size: 15px}
+       .texto1-2,.texto1-4,.texto1-6,.texto1-8,.texto1-10,.texto1-12,.texto1-14,.texto1-16,.texto1-18,.texto1-20,.texto1-22,.texto1-24,.texto1-26,.texto1-28,.texto1-30,.texto1-32,.texto1-34,.texto1-36,.texto1-38,.texto1-40,.texto1-42,.texto1-44,.texto1-46,.texto1-48{float: none;clear: both;margin-right: 0px;font-size: 15px}     
    
 .divNivelBocata2 {
     margin-top: 60px;
