--- a/css/propioCss.css
+++ b/css/propioCss.css
@@ -358,8 +358,9 @@ and open the template in the editor.
             position: absolute;bottom: 0;width: 100%;
         }
         
-    
-    
+    .footer2{
+            position: absolute;bottom: 0;width: 100%;
+        }    
     .footer-home {
     padding: 0;
     font-size: 22px;
@@ -377,9 +378,9 @@ and open the template in the editor.
     #botonAyuda:hover + #textoAyuda{border: 2px solid grey}
     
 
-    .contenedorEjercicio{height: 600px}
+    .contenedorEjercicio{}
     
-         #contenedorEjercicio{margin-bottom: 100px}
+         #contenedorEjercicio{margin-bottom: 25px}
     
     .bordesCirculares{
      border-radius: 50% 50% 50% 50%;
@@ -445,13 +446,14 @@ padding-top: 12px    }
     .labelNombre{float: left;padding-top: 7px;margin-bottom: 0;text-align: right;}
     .divLabelNombre{float: left}
     
-    .contenedorUsuarioFuerte{height: 500px}
+    .contenedorUsuarioFuerte{}
 
 
     
     /*¡CAMBIARA CUANDO ESTE EN PANTALLA MAS DE 1299*/
     @media screen and (max-height: 901px) {
     .footer1{position: unset;margin-top: 150px;}
+    
     }
     
     
@@ -464,6 +466,10 @@ padding-top: 12px    }
                 font-size: 36px;
             }
     }
+    
+    
+    .contenedorUsuarioFuerte{margin-bottom: 50px}
+    
 
     @media (max-width: 1199px) { 
 
@@ -567,18 +573,27 @@ padding-top: 12px    }
         
     .footer1{
             position: absolute;bottom: 0;width: 100%;
-        }                  
+        }  
+        
+        
+        .footer2{
+            position: absolute;bottom: 0;width: 100%;
+        }         
     }
     
     
     
     
             /*¡CAMBIARA CUANDO ESTE EN PANTALLA HASTA 1199*/
-    @media screen and (max-height: 850px) {
+    @media screen and (max-height: 825px) {
     .footer1{position: unset;margin-top: 150px;}
-    }
-        
     
+    }
+    
+    @media screen and (max-height: 750px) {
+    .footer2{position: unset;margin-top: 150px;}
+    
+    }    
     
     
     @media (max-width: 991px) { 
@@ -589,7 +604,6 @@ padding-top: 12px    }
      @media screen and (min-height: 801px) {
     
     .footer1{position: absolute;bottom: 0;width: 100%;}
-    
     }
      
      
@@ -599,11 +613,13 @@ padding-top: 12px    }
          .footer1{
             position: unset;margin-top: 100px;
         }
-     
-     
+        
+        .footer2{
+            position: unset;margin-top: 100px;
+        }     
          .contenedorEjercicio{height: 100%}
 
-         #contenedorEjercicio{margin-bottom: 50px}
+         #contenedorEjercicio{margin-bottom: 25px}
          
         .letraLogin{
             display: none;
@@ -705,7 +721,7 @@ padding-top: 12px    }
         #repeticiones{}          
     
     
-    .contenedorUsuarioFuerte{height: 100%}
+    .contenedorUsuarioFuerte{height: auto}
     
     }
     
